# cpdisplay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create-packages.sh
config/: .gitignore  CMakeLists.txt  cpd-settings.ini  cs-circle.js  google-maps.example.ini  hdd-settings.ini  maps.ini  maps.js  maps.js.alt  profile-1eng.ini  profile-big-pfd.ini  profile-default.ini  usgs.js
config/examples/: CMakeLists.txt  cpd-settings.ini  google-maps.example.ini  google-maps.js  map.js  maps.ini  ol-map.ini  ol-map.js  profile.ini  qt-google-maps.ini  style-default.qss
ext/qfi/: CMakeLists.txt  qfi.qrc
ext/qfi/core/: CMakeLists.txt  qfi_PFD.cpp  qfi_PFD.h
ext/qfi/ui/: CMakeLists.txt  WidgetPFD.cpp  WidgetPFD.h  WidgetPFD.ui
hdd/: CMakeLists.txt
hdd/core/: CMakeLists.txt
hdd/gui/: CMakeLists.txt  main.cpp  window.cpp
hdd/instruments/: CMakeLists.txt  adicontroller.cpp  altcontroller.cpp  altcontroller.h  hsicontroller.h  tcdcontroller.h  vsicontroller.h
hdd/map/: CMakeLists.txt  mapcontroller.cpp  mapcontroller.h  mapwidget.cpp  mapwidget.h  window.h
hdd/pfd/: CMakeLists.txt  pfdwidget.cpp  pfdwidget.h
hdd/utils/: CMakeLists.txt
src/: CMakeLists.txt
src/comms/: CMakeLists.txt  comms.h  commscontroller.cpp  commscontroller.h  commsline.cpp  commsline.h  commswidget.cpp  commswidget.h  timewidget.cpp  timewidget.h
src/core/: CMakeLists.txt  aircraft.cpp  aircraft.h  coreconsts.h  cpdsettings.cpp  cpdsettings.h  hddcontroller.cpp  hddcontroller.h  hddsettings.cpp  hddsettings.h  mapconsts.h  switchboard.cpp  switchboard.h  xplanedata.cpp  xplanedata.h  xplanedref.h
src/cpdisplay/: CMakeLists.txt  cpdcontroller.cpp  cpdcontroller.h  cpdwidget.cpp  cpdwidget.h  cpdwindow.cpp  cpdwindow.h  main.cpp  mcsslavewidget.cpp  mcsslavewidget.h  mcswidget.cpp  mcswidget.h  window.cpp
src/engine/: CMakeLists.txt  engineconsts.h  enginecontroller.cpp  enginecontroller.h  enginedial.cpp  enginedial.h  enginedialwidget.cpp  enginedialwidget.h  enginewidget.cpp  enginewidget.h  fuelwidget.cpp  fuelwidget.h  singleenginewidget.cpp  singleenginewidget.h  singlefuelwidget.cpp  singlefuelwidget.h  throttlewidget.cpp  throttlewidget.h
src/gear/: CMakeLists.txt  flapswidget.cpp  flapswidget.h  gearconsts.h  gearcontroller.cpp  gearcontroller.h  gearwidget.cpp  gearwidget.h  singleflapwidget.cpp  singleflapwidget.h  singlegearwidget.cpp  singlegearwidget.h
src/gui/: CMakeLists.txt  cpdcontroller.cpp  cpdcontroller.h  hddcontroller.cpp  hddcontroller.h  main.cpp  window.cpp  window.h
src/images/: resources.qrc
src/instruments/: CMakeLists.txt  adicontroller.h  altcontroller.h  asicontroller.cpp  asicontroller.h  hsicontroller.cpp  hsicontroller.h  pfdcontroller.cpp  pfdcontroller.h  tcdcontroller.cpp  tcdcontroller.h  vsicontroller.cpp  vsicontroller.h
src/map/: CMakeLists.txt  mapconsts.h  mapcontroller.cpp  mapcontroller.h  mapoverlay.cpp  mapoverlay.h  mapview.cpp  mapview.h  mapwidget.cpp  mapwidget.h
src/mcsdataswitch/: CMakeLists.txt  main.cpp  mcsconsts.h  mcsdataswitch.cpp  mcsdataswitch.h
src/resources/: resources.qrc  style.css
src/resources/icons/: airplane-yellow.128x128.xcf  airplane.128x128.xcf
src/traffic/: CMakeLists.txt  trafficcontroller.cpp  trafficcontroller.h  trafficwidget.cpp  trafficwidget.h
src/utils/: CMakeLists.txt  geodist.cpp  geodist.h
src/weapons/: CMakeLists.txt
